--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-to run goto ./saper and than type "make" output should be in ./saper/out
+to run goto ./saper and than type "make" output should be in ./saper/build/out
